Added jwt athentication and IdentityMongoDbProvider

--- a/Chat.Api/appsettings.Development.json
+++ b/Chat.Api/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ChatDb",
+    "CollectionName": "ChatDb"
+  },
+  "SecretToken":  "BigSecretThatHoldsSecrets"
 }
